projects/vb6parse/snapshots/tests/library/logic/switch/switch_grade_calculation.snap
---
source: projects/vb6parse/tests/library/logic/switch.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: grade
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Switch
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: score
                                - kind: Whitespace
                                  text: " "
                                - kind: GreaterThanOrEqualOperator
                                  text: ">="
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "90"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"A\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: score
                                - kind: Whitespace
                                  text: " "
                                - kind: GreaterThanOrEqualOperator
                                  text: ">="
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "80"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"B\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: score
                                - kind: Whitespace
                                  text: " "
                                - kind: GreaterThanOrEqualOperator
                                  text: ">="
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "70"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"C\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: BooleanLiteralExpression
                              children:
                                - kind: TrueKeyword
                                  text: "True"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"F\""
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
